k8s_manifest/ingress-app.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: workout11-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:012055136996:certificate/51138d54-2342-4dcd-a905-6b664caefe8a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/security-group-inbound-cidrs: 0.0.0.0/0, ::/0
  labels:
    app: ingress
spec:
  rules:
    - host: workout11.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: nginx-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment
spec:
  selector:
    matchLabels:
      app: workout-app
  replicas: 3
  template:
    metadata:
      labels:
        app: workout-app
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.17.6
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx
          readOnly: true
          name: nginx-conf
        - mountPath: /var/log/nginx
          name: log
        - mountPath: /workout_app/tmp/sockets
          name: workout-app
      - name: app-container
        image: workout11
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /workout_app/tmp/sockets
          name: workout-app
        env: # secretリソースから環境変数を取得
          - name: RAILS_MASTER_KEY
            valueFrom:
              secretKeyRef:
                name: db-secret
                key: RAILS_MASTER_KEY
      volumes:
      - name: nginx-conf
        configMap: 
          name: nginx-conf
          items:
            - key: workout_app.conf
              path: conf.d/workout_app.conf
            - key: nginx.conf
              path: nginx.conf
            - key: mime.types
              path: mime.types
      - name: log
        emptyDir: {}
      - name: workout-app
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: workout-app
...
